-CustomerReservation View DTO(예약 - 고객시점)